WRO-11342: Fixed RangePicker's text not showing bug for copper skin. (#672)
* Fixed RangePicker's text not showing bug

* Added changelog

* dummy commit

* Changed changelog

* dummy commit

* revert dummy commit

* minor fixes

--- a/styles/colors-copper.less
+++ b/styles/colors-copper.less
@@ -143,9 +143,10 @@
 @agate-picker-active-bg-color: @agate-accent;
 @agate-picker-active-bg-image: none;
 @agate-picker-item-bg-color: transparent;
+@agate-picker-item-color: @agate-gray;
 @agate-picker-item-decrement-bg-image: none;
 @agate-picker-item-increment-bg-image: none;
-@agate-picker-item-focus-color: @agate-foreground-focus;
+@agate-picker-item-focus-color: @agate-light-gray;
 @agate-picker-item-focus-bg-color: @agate-background-focus;
 @agate-picker-item-focus-bg-image: inherit;
 
